# Useful-classes

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main_client.cpp  main_server.cpp
include/: Generator.h  LongNumber.h  Matrix.h  md5.hpp  self.h  tests.h  tests.hpp
include/networks/: EchoClient.hpp  EchoServer.hpp
include/structs/: Generator.hpp  Graph.hpp
src/: Generator.cpp  LongNumber.cpp  Matrix.cpp  echo_client  echo_server  fermat_factorization.cpp  leetcode.sh  main  main.cpp  md5.cpp  script.sh  self.cpp  servers.sh  tests.cpp  video_prog.py
src/algoritms/: fermat_factorization.cpp  md5.cpp
src/networks/: ChatServer.hpp  ClientSession.hpp  EchoClient.cpp  EchoServer.cpp  Room.hpp  RoomManager.hpp  SessionManager.hpp
src/networks/SocketChat/: AuthManager.cpp  AuthManager.hpp  ClientSession.cpp  ClientSession.hpp  Room.cpp  RoomManager.cpp  RoomManager.hpp  SessionManager.cpp  SessionManager.hpp
src/networks/database/: ChatDatabase.cpp  ChatDatabase.hpp  Database.cpp  Database.hpp  EchoDatabase.cpp  EchoDatabase.hpp  FileDatabase.hpp  HttpDatabase.hpp  my_own_db
src/structs/: Generator.cpp  LongNumber.cpp  Matrix.cpp
